--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,8 @@ ul {
 .height-5 {
   height: 5vh;
 }
-
-.mainColor {
-  background-color: #4CB5BA;
+.map-bg {
+  background: url('./assets/image/map.png') no-repeat center center/cover;
+  height: 40vh;
+  width: 50vw;
 }
